testsuite/tests/properties/invalid_final/final_parse_field.lkt
import lexer_example

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- BarNode(ExampleNode(@example))
}

@abstract class FooNode implements Node[FooNode] {
}

class ExampleNode : FooNode implements TokenNode {
}

class BarNode : FooNode {
    @export @final @parse_field f: ExampleNode
}
